k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-service
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-service
  template:
    metadata:
      labels:
        app: app-service
    spec:
      containers:
        - name: app-container
          image: 906929958394.dkr.ecr.us-east-1.amazonaws.com/eks-deploy:latest
          ports:
            - containerPort: 3000
