k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: default
spec:
  selector:
    app: app-service
  ports:
    - name: http          
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
